fix: aligner côté droit du message réassurance avec les canaux

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -845,7 +845,8 @@ ul {
     background-color: $bg-light;
     border-radius: 8px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0;
+    box-sizing: border-box;
   }
 
   &__reassurance {
